<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_result">

    <LinearLayout
        android:id="@+id/layout_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_result"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="63dp"
            android:src="@drawable/frown"/>

    </LinearLayout>

    <TextView
        android:id="@+id/title_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bad_results"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/result_suggestion"
        android:layout_width="345dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title_result"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/suggestion"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/bad_result1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/bad_1"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/bad_result2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/bad_2"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/bad_result3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/bad_3"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/bad_result4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/bad_4"
            android:textSize="18sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_suggestion"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnHome"
            android:text="@string/back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/oval_light"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnTryAgain"
            android:text="@string/try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/oval"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>