<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_home"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hi_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/hi_"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/do_you_know_that_your_teeth_are_healthy_or_not__let_s_check_it_now_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/greeting"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/oval"
            android:layout_marginTop="16dp"
            android:text="@string/start"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>
